Lang changes and all settings put in mc.cfg